contrast issues

--- a/styles/place-large.css
+++ b/styles/place-large.css
@@ -1,7 +1,7 @@
 :root {
     --primary-color: #B22222; 
     --background-color: #ffffff;
-    --text-color: #333333; 
+    --text-color: #212121; 
     --font-family-main: 'Montserrat', sans-serif;
     --font-family-secondary: 'Nunito Sans', sans-serif;
 }
